fix input width overflow

--- a/src/features/Form/Form.module.scss
+++ b/src/features/Form/Form.module.scss
@@ -80,6 +80,8 @@
   transition: 0.3s ease;
   font-weight: 500;
   font-size: 20px;
+  min-width: 0;
+  overflow: hidden;
 }
 
 .formInput::placeholder {
